--- a/music.html
+++ b/music.html
@@ -4,40 +4,40 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.CDkZjnhp.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.CfXpofHB.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.DTD1kyDN.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Ch1ved8Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/SRdB-lGc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D3onmeIQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DVkzB7bg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CT0VVmtz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/y2FNww8U.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DGmtlgnK.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/ClxpbMTO.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B99y9Pe7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.o1NQ1PfK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CP-aaf_q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CrAfURuh.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sSJYHPc3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BPEyhr7n.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DA6BkPl2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CeNUbtn0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CfFb2Ckv.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C0C2jZgG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DsnmJJEf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Bv6pWsV3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DVPd0V0H.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.25HQQwNx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CdXxOMja.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.DjHukUYw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C428yJJW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BIGUr8nV.js"><!--[--><link rel="icon" href="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='107'%20height='128'%20viewBox='0%200%20107%20128'%3e%3ctitle%3esvelte-logo%3c/title%3e%3cpath%20d='M94.157%2022.819c-10.4-14.885-30.94-19.297-45.792-9.835L22.282%2029.608A29.92%2029.92%200%200%200%208.764%2049.65a31.5%2031.5%200%200%200%203.108%2020.231%2030%2030%200%200%200-4.477%2011.183%2031.9%2031.9%200%200%200%205.448%2024.116c10.402%2014.887%2030.942%2019.297%2045.791%209.835l26.083-16.624A29.92%2029.92%200%200%200%2098.235%2078.35a31.53%2031.53%200%200%200-3.105-20.232%2030%2030%200%200%200%204.474-11.182%2031.88%2031.88%200%200%200-5.447-24.116'%20style='fill:%23ff3e00'/%3e%3cpath%20d='M45.817%20106.582a20.72%2020.72%200%200%201-22.237-8.243%2019.17%2019.17%200%200%201-3.277-14.503%2018%2018%200%200%201%20.624-2.435l.49-1.498%201.337.981a33.6%2033.6%200%200%200%2010.203%205.098l.97.294-.09.968a5.85%205.85%200%200%200%201.052%203.878%206.24%206.24%200%200%200%206.695%202.485%205.8%205.8%200%200%200%201.603-.704L69.27%2076.28a5.43%205.43%200%200%200%202.45-3.631%205.8%205.8%200%200%200-.987-4.371%206.24%206.24%200%200%200-6.698-2.487%205.7%205.7%200%200%200-1.6.704l-9.953%206.345a19%2019%200%200%201-5.296%202.326%2020.72%2020.72%200%200%201-22.237-8.243%2019.17%2019.17%200%200%201-3.277-14.502%2017.99%2017.99%200%200%201%208.13-12.052l26.081-16.623a19%2019%200%200%201%205.3-2.329%2020.72%2020.72%200%200%201%2022.237%208.243%2019.17%2019.17%200%200%201%203.277%2014.503%2018%2018%200%200%201-.624%202.435l-.49%201.498-1.337-.98a33.6%2033.6%200%200%200-10.203-5.1l-.97-.294.09-.968a5.86%205.86%200%200%200-1.052-3.878%206.24%206.24%200%200%200-6.696-2.485%205.8%205.8%200%200%200-1.602.704L37.73%2051.72a5.42%205.42%200%200%200-2.449%203.63%205.79%205.79%200%200%200%20.986%204.372%206.24%206.24%200%200%200%206.698%202.486%205.8%205.8%200%200%200%201.602-.704l9.952-6.342a19%2019%200%200%201%205.295-2.328%2020.72%2020.72%200%200%201%2022.237%208.242%2019.17%2019.17%200%200%201%203.277%2014.503%2018%2018%200%200%201-8.13%2012.053l-26.081%2016.622a19%2019%200%200%201-5.3%202.328'%20style='fill:%23fff'/%3e%3c/svg%3e"/><!--]-->
+		<link rel="modulepreload" href="./_app/immutable/chunks/Bf_mO7AQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BAWQIC7O.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BtilbtBz.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C0LV4eWI.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.DNwahbNE.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CSjh6MEy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CyfAjOTr.js"><!--[--><link rel="icon" href="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='107'%20height='128'%20viewBox='0%200%20107%20128'%3e%3ctitle%3esvelte-logo%3c/title%3e%3cpath%20d='M94.157%2022.819c-10.4-14.885-30.94-19.297-45.792-9.835L22.282%2029.608A29.92%2029.92%200%200%200%208.764%2049.65a31.5%2031.5%200%200%200%203.108%2020.231%2030%2030%200%200%200-4.477%2011.183%2031.9%2031.9%200%200%200%205.448%2024.116c10.402%2014.887%2030.942%2019.297%2045.791%209.835l26.083-16.624A29.92%2029.92%200%200%200%2098.235%2078.35a31.53%2031.53%200%200%200-3.105-20.232%2030%2030%200%200%200%204.474-11.182%2031.88%2031.88%200%200%200-5.447-24.116'%20style='fill:%23ff3e00'/%3e%3cpath%20d='M45.817%20106.582a20.72%2020.72%200%200%201-22.237-8.243%2019.17%2019.17%200%200%201-3.277-14.503%2018%2018%200%200%201%20.624-2.435l.49-1.498%201.337.981a33.6%2033.6%200%200%200%2010.203%205.098l.97.294-.09.968a5.85%205.85%200%200%200%201.052%203.878%206.24%206.24%200%200%200%206.695%202.485%205.8%205.8%200%200%200%201.603-.704L69.27%2076.28a5.43%205.43%200%200%200%202.45-3.631%205.8%205.8%200%200%200-.987-4.371%206.24%206.24%200%200%200-6.698-2.487%205.7%205.7%200%200%200-1.6.704l-9.953%206.345a19%2019%200%200%201-5.296%202.326%2020.72%2020.72%200%200%201-22.237-8.243%2019.17%2019.17%200%200%201-3.277-14.502%2017.99%2017.99%200%200%201%208.13-12.052l26.081-16.623a19%2019%200%200%201%205.3-2.329%2020.72%2020.72%200%200%201%2022.237%208.243%2019.17%2019.17%200%200%201%203.277%2014.503%2018%2018%200%200%201-.624%202.435l-.49%201.498-1.337-.98a33.6%2033.6%200%200%200-10.203-5.1l-.97-.294.09-.968a5.86%205.86%200%200%200-1.052-3.878%206.24%206.24%200%200%200-6.696-2.485%205.8%205.8%200%200%200-1.602.704L37.73%2051.72a5.42%205.42%200%200%200-2.449%203.63%205.79%205.79%200%200%200%20.986%204.372%206.24%206.24%200%200%200%206.698%202.486%205.8%205.8%200%200%200%201.602-.704l9.952-6.342a19%2019%200%200%201%205.295-2.328%2020.72%2020.72%200%200%201%2022.237%208.242%2019.17%2019.17%200%200%201%203.277%2014.503%2018%2018%200%200%201-8.13%2012.053l-26.081%2016.622a19%2019%200%200%201-5.3%202.328'%20style='fill:%23fff'/%3e%3c/svg%3e"/><!--]-->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><nav><a href="/">Home</a></nav> <main><!----><div class="music-container svelte-1c6gzfm"><div class="tabs svelte-1c6gzfm"><!--[--><button class="svelte-1c6gzfm active"><img src="./sun.png" alt="" srcset="" class="svelte-1c6gzfm"/></button><button class="svelte-1c6gzfm"><img src="./clouds.png" alt="" srcset="" class="svelte-1c6gzfm"/></button><button class="svelte-1c6gzfm"><img src="./cloudy-sun.png" alt="" srcset="" class="svelte-1c6gzfm"/></button><!--]--></div> <div class="content svelte-1c6gzfm"><!--[--><div class="tab-content"><div class="spotify-embed svelte-1c6gzfm"><!----><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2ugTWMRHfp5koJiDNihC0y?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><!----></div></div><!--]--></div></div><!----><!----></main><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><nav><a href="./">Home</a></nav> <main><!----><div class="music-container svelte-1c6gzfm"><div class="tabs svelte-1c6gzfm"><!--[--><button class="svelte-1c6gzfm active"><img src="./sun.png" alt="" srcset="" class="svelte-1c6gzfm"/></button><button class="svelte-1c6gzfm"><img src="./clouds.png" alt="" srcset="" class="svelte-1c6gzfm"/></button><button class="svelte-1c6gzfm"><img src="./cloudy-sun.png" alt="" srcset="" class="svelte-1c6gzfm"/></button><!--]--></div> <div class="content svelte-1c6gzfm"><!--[--><div class="tab-content"><div class="spotify-embed svelte-1c6gzfm"><!----><iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2ugTWMRHfp5koJiDNihC0y?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe><!----></div></div><!--]--></div></div><!----><!----></main><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_bnrfth = {
+					__sveltekit_1rmgolt = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Ch1ved8Q.js"),
-						import("./_app/immutable/entry/app.B99y9Pe7.js")
+						import("./_app/immutable/entry/start.o1NQ1PfK.js"),
+						import("./_app/immutable/entry/app.C0C2jZgG.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
