--- a/music.html
+++ b/music.html
@@ -6,15 +6,15 @@
 		
 		<link href="./_app/immutable/assets/0.CfXpofHB.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.DTD1kyDN.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.C5obUye3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DzJtsvYU.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DmkitJNK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/I3_JKFNv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CrAfURuh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/sSJYHPc3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BPEyhr7n.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DA6BkPl2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CeNUbtn0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CfFb2Ckv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CxD0HBu0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BKHCkttv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DsnmJJEf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bf_mO7AQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BAWQIC7O.js">
@@ -29,15 +29,15 @@
 			
 			<script>
 				{
-					__sveltekit_1som4e5 = {
+					__sveltekit_44cj13 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.C5obUye3.js"),
-						import("./_app/immutable/entry/app.CxD0HBu0.js")
+						import("./_app/immutable/entry/start.DmkitJNK.js"),
+						import("./_app/immutable/entry/app.BKHCkttv.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
