--- a/music.html
+++ b/music.html
@@ -4,21 +4,21 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.CfXpofHB.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.DvrY7UNs.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.DTD1kyDN.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DmkitJNK.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/I3_JKFNv.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B9u8W7jK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CVEkBBpj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CrAfURuh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/sSJYHPc3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BPEyhr7n.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DA6BkPl2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CeNUbtn0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CfFb2Ckv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BKHCkttv.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.tjNihlwJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DsnmJJEf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bf_mO7AQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BAWQIC7O.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BtilbtBz.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DrwDbtHq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C0LV4eWI.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.DNwahbNE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CSjh6MEy.js">
@@ -29,15 +29,15 @@
 			
 			<script>
 				{
-					__sveltekit_44cj13 = {
+					__sveltekit_vmw4cx = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DmkitJNK.js"),
-						import("./_app/immutable/entry/app.BKHCkttv.js")
+						import("./_app/immutable/entry/start.B9u8W7jK.js"),
+						import("./_app/immutable/entry/app.tjNihlwJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
